--- a/index.html
+++ b/index.html
@@ -164,9 +164,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#nim-everything" id="nim-everything">nim-everything</a></h1>
-<p>Hi (●’◡’●)ﾉ Welcome to my Book Nim nim-everything
-A Nim Notebook for Documenting my nim projects.
-I usually don't make huge projects, so excuse me if you're expecting (im a average programmer)</p>
+<p>Hi (●’◡’●)ﾉ Welcome to my Book Nim nim-everything</p>
+<p>A Nim Notebook for Documenting my nim projects. I usually don't make huge projects, so excuse me if you're expecting (im a average programmer)</p>
 <p>I update this very less often, so Feel free to contribute!</p>
 <p>Enjoy the book. 📔📕😁</p>
 
