deploy: f6811bc2e1fa8ab68f31df488c2cd80ad73caa72

--- a/index.html
+++ b/index.html
@@ -163,10 +163,11 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#nim-everything" id="nim-everything">nim-everything</a></h1>
-<p>Hi (●’◡’●)ﾉ Welcome to my Book Nim nim-everything</p>
+                        <h1><a class="header" href="#nim-everything" id="nim-everything">Nim Everything</a></h1>
+<p>Hi (●’◡’●)ﾉ</p>
+<p>Welcome to my Book Nim nim-everything 👋</p>
 <p>A Nim Notebook for Documenting my nim projects. I usually don't make huge projects, so excuse me if you're expecting (im a average programmer)</p>
-<p>I update this very less often, so Feel free to contribute!</p>
+<p>I update this very less often, so Feel free to contribute! 🤝</p>
 <p>Enjoy the book. 📔📕😁</p>
 
                     </main>
