--- a/print.html
+++ b/print.html
@@ -168,7 +168,7 @@
                         <h1><a class="header" href="#nim-everything" id="nim-everything">Nim Everything</a></h1>
 <p>Hi (●’◡’●)ﾉ</p>
 <p>Welcome to my Book Nim nim-everything 👋</p>
-<p>A Nim Notebook for Documenting my nim projects. I usually don't make huge projects, so excuse me if you're expecting (im a average programmer)</p>
+<p>A Nim Notebook for Documenting my nim projects. I usually don't make huge projects, so excuse me if you're expecting (i'm a average programmer)</p>
 <p>I update this very less often, so Feel free to contribute! 🤝</p>
 <p>Enjoy the book. 📔📕😁</p>
 <h1><a class="header" href="#how-i-found-nim-" id="how-i-found-nim-">How I found nim 🔍🧐</a></h1>
