deploy: e2fe2948ce9d1795aa2631f8ed991493c5c851af

--- a/print.html
+++ b/print.html
@@ -171,7 +171,11 @@
 <p>A Nim Notebook for Documenting my nim projects. I usually don't make huge projects, so excuse me if you're expecting (i'm a average programmer)</p>
 <p>I update this very less often, so Feel free to contribute! 🤝</p>
 <p>Enjoy the book. 📔📕😁</p>
-<h1><a class="header" href="#how-i-found-nim-" id="how-i-found-nim-">How I found nim 🔍🧐</a></h1>
+<h1><a class="header" href="#how-i-found-nim" id="how-i-found-nim">How I found nim</a></h1>
+<p>I was casually looking on benchmarks after I got frustrating with the slow interpretation times of python3 and the error handling in golang. I saw a language named <code>nim</code> on the list having a benchmark score near c. It was impressive, I was searching for a python3 alternative, something fast and efficient and not as raw as c. Golang was alright, but the package management was a bit of a kick in the balls. I was thinking of Rust, as it's quite popular and has great performance, but as far as the benchmark suggested nim is far more faster than Rust both in terms of compilation and runtime performance.</p>
+<p>From the reviews Nim seemed interesting. The most cool thing being people mentioning it alike python. I had to check it out.</p>
+<h2><a class="header" href="#nim-lang---website" id="nim-lang---website">Nim Lang - Website</a></h2>
+<p>For those of you who don't know yet, nim-lang.org is the official website. I visited it just to check the syntax system.</p>
 <h1><a class="header" href="#docs-resources-pdfs-" id="docs-resources-pdfs-">Docs, Resources, Pdfs 🗃📥</a></h1>
 <h1><a class="header" href="#hi-nim-meet-vim-" id="hi-nim-meet-vim-">Hi Nim, Meet Vim 📝👋</a></h1>
 <h1><a class="header" href="#its-all-variable-" id="its-all-variable-">It's all Variable 🏷</a></h1>
